# Point-And-Click-Game-Sample

./: .gitignore  CMakeLists.txt  README.md  README.txt
Lesson0/src/: main.cpp
PointAndClickGame/: CMakeLists.txt
PointAndClickGame/src/: housekeeping.cpp  housekeeping.h  item.cpp  item.h  lbutton.cpp  lbutton.h  main.cpp  picture.cpp  picture.h  text.cpp  text.h
